--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
